# cppcraft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO  client.project  cppcraft.workspace  makefile  setup.sh
Debug/: callgraph.sh  config.ini  debug.sh
Debug/mod/std/: audio.json  blocks.json  init.json  items.json  mod.json  tiles.json
Debug/shaders/: blocks_lava.glsl  blocks_reflection.glsl  blocks_water.glsl  culledalpha.glsl  fsterrainfog.glsl  lightw.glsl  playerhand.glsl  playerhand_helditem.glsl  playerhand_voxel.glsl  standard.glsl  stdalpha.glsl  stdlight.glsl  unpack_light.glsl  worldlight.glsl  worldlight_frag.glsl
common/: CMakeLists.txt  sectorblock.hpp
ext/: CMakeLists.txt
network/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: CMakeLists.txt
source/: biome.cpp  biome.hpp  blockmodels_crosses.cpp  blockmodels_lanterns.cpp  blockreg.hpp  blocks.cpp  blocks.hpp  blocks_bordered.cpp  blocks_bordered.hpp  blocks_vfaces.cpp  camera.cpp  chat.cpp  columns.cpp  columns.hpp  common.hpp  compiler_schedule.cpp  compiler_scheduler.hpp  compilers.cpp  compilers.hpp  compressor.cpp  compressor_rle.cpp  drawq_rendergrid.cpp  flatland.hpp  generator.cpp  generator.hpp  items.cpp  items.hpp  lighting.cpp  lighting.hpp  lighting_algos.cpp  lighttable.cpp  lighttable.hpp  main.cpp  menu.cpp  menu.hpp  minimap.cpp  netplayer.cpp  netplayer.hpp  netplayers.cpp  particles.cpp  (+73 more)
source/db/: blockdata.hpp  blockdb.cpp  blockdb.hpp
source/generator/: blocks.cpp  blocks.hpp  genobject.hpp  object.hpp  objectq.cpp  simplex3.h  sse_simplex3.cpp  sse_simplex3.h  terragen.cpp  terragen.hpp
source/generator/biomegen/: biome.cpp  biome.hpp  biomegen.cpp  colortable.cpp  colortable.hpp
source/generator/objects/: basic_house.cpp  basic_tree.cpp  helpers.cpp  helpers.hpp
source/generator/processing/: oregen.cpp  oregen.hpp  postproc.cpp  postproc.hpp
source/generator/terrain/: helpers.cpp  helpers.hpp  t_grass.cpp  t_snow.cpp  terrain.cpp  terrain.hpp  terrains.cpp  terrains.hpp
source/gui/: bordered_frame.cpp  bordered_frame.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  control.hpp  gui.hpp  inventory.hpp  item_renderer.cpp  item_renderer.hpp  menu.cpp  menu.hpp  progress.cpp  progress.hpp  rect.hpp  vertex.hpp  window.cpp  window.hpp
source/meshes/: vemitcross.cpp  vemitter.cpp
source/server/: entities.hpp  entity.hpp
source/sound/: handle.hpp  sound.cpp  sound.hpp  soundsystem.cpp  soundsystem.hpp  stream.cpp
src/: CMakeLists.txt  atmosphere.cpp  biome.cpp  biome.hpp  block.cpp  block.hpp  blockmodels.cpp  blockmodels.hpp  blockmodels_crosses.cpp  blockmodels_cubes.cpp  blocks.cpp  blocks.hpp  blocks_bordered.cpp  blocks_bordered.hpp  blocks_vfaces.cpp  camera.cpp  camera.hpp  chat.cpp  chunks.cpp  columns.cpp  columns.hpp  common.hpp  compiler_schedule.cpp  compiler_scheduler.hpp  compilers.cpp  compilers.hpp  drawq.cpp  drawq.hpp  drawq_rendergrid.cpp  flatland.hpp  game.hpp  generator.cpp  generator.hpp  grid_walker.hpp  items.cpp  items.hpp  light_correction.cpp  lighting.cpp  lighting.hpp  lighting_algos.cpp  (+77 more)
src/db/: blockdata.cpp  blockdata.hpp  blockdb.cpp  blockdb.hpp  database.hpp  itemdata.cpp  itemdata.hpp  itemdb.hpp
src/generator/: blocks.cpp  blocks.hpp  items.cpp  object.hpp  objectq.cpp  objectq.hpp  oregen.cpp  postproc.cpp  random.hpp  terragen.cpp  terragen.hpp  terragen_objects.cpp
src/generator/biomegen/: biome.cpp  biome.hpp  biomegen.cpp  colortable.hpp
src/generator/objects/: basic_house.cpp  basic_tree.cpp  helpers.cpp  jungle_tree.cpp  mushrooms.cpp  mushrooms.hpp  volumetrics.cpp
src/generator/processing/: oregen.cpp  oregen.hpp  postproc.cpp  postproc.hpp
src/generator/simulation/: simulator.cpp  simulator.hpp
src/generator/terrain/: helpers.cpp  helpers.hpp  poisson.cpp  poisson.hpp  t_desert.cpp  t_grass.cpp  t_jungle.cpp  t_snow.cpp  t_taiga.cpp  terrain.cpp  terrain.hpp  terrains.cpp  terrains.hpp
src/gui/: button.cpp  button.hpp  checkbox.hpp  control.hpp  frontend_inventory.cpp  frontend_inventory.hpp  gui.cpp  gui.hpp  hotbar.hpp  inventory.cpp  item_renderer.cpp  item_renderer.hpp  itemslot.hpp  menu.cpp  progress.cpp  progress.hpp  rect.hpp  window.cpp
src/items/: inventory.hpp  item.hpp
src/meshes/: vemitcross.cpp  vemitter.cpp
src/script/: script.hpp
src/server/: client.hpp  clients.hpp  main.cpp
src/sound/: channel.cpp  channel.hpp  sound.cpp  sound.hpp  stream.cpp  stream.hpp
test/: CMakeLists.txt  mock_generator.cpp  mock_precompq.cpp  mock_sectors.cpp  test_gridwalker.cpp  test_lighting.cpp  test_sector.cpp
